<resources>
    <string name="app_name">HotelMediaBox</string>

    <!--Home Page-->
    <string name="home_today_weather">TODAY WEATHER</string>
    <string name="home_wifi_id">WIFI ID</string>
    <string name="home_wifi_password">WIFI PASSWORD</string>
    <string name="home_channels">Channels</string>
    <string name="home_navigation">Navigation</string>
    <string name="home_select">Select</string>
    <string name="home_icon_live_tv">LIVE TV\nChannels</string>
    <string name="home_icon_vod">VOD\nMovies</string>
    <string name="home_icon_smart_app">Smart\nApps</string>
    <string name="home_icon_room_service">Room\nService</string>
    <string name="home_icon_facilities">Hotel\nFacilities</string>
    <string name="home_icon_near_by">NearBy\nMe</string>
    <string name="home_icon_tourist">Tourist\nInfo</string>
    <string name="home_icon_flight">Flight\nInfo</string>
    <string name="home_icon_weather">Weather\nForecast</string>
    <string name="home_icon_guest">Guest\nServices</string>
    <string name="home_icon_setting">Setting</string>

    <!--TV channel fullscreen-->
    <string name="tv_channel_fullscreen_home">Home</string>
    <string name="tv_channel_fullscreen_channel">Channel</string>
    <string name="tv_channel_fullscreen_back">Back to Channel List</string>

    <!--TV channel-->
    <string name="tv_channel_back">Back</string>
    <string name="tv_channel_watch_channel">Watch Channel</string>

    <!--Factory-->
    <string name="factory_import_json_files">Import json files</string>
    <string name="factory_export_json_files">Export json files</string>
    <string name="factory_check_upgrade_from_url">check upgrade from url</string>
    <string name="factory_check_upgrade_from_usb">check upgrade from usb</string>
    <string name="factory_open_setting">Open Setting</string>
    <string name="factory_open_default_launcher">Open Default Launcher</string>
    <string name="factory_show_inside_hotel_files">Show Inside hotel Files</string>
    <string name="factory_show_usb_files">Show USB Files</string>
    <string name="factory_clear_info_text">Clear Info Text</string>
    <string name="factory_scan_dvb_channels">Scan DVB T/T2 Channels</string>

    <!--GenreType-->
    <string name="genre_all">All</string>
    <string name="genre_movie">Movie</string>
    <string name="genre_mtv">MTV</string>
    <string name="genre_news">News</string>
    <string name="genre_sport">Sport</string>


</resources>
