<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/textView_channels"
        style="@style/MainPrimaryText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_18sdp"
        android:layout_marginBottom="@dimen/_18sdp"
        android:text="@string/home_channels"
        android:textSize="@dimen/_9ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_17sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_15sdp"
        android:src="@drawable/ic_change_channel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView_channels" />

    <TextView
        android:id="@+id/textView_navigation"
        style="@style/MainPrimaryText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_21sdp"
        android:layout_marginBottom="@dimen/_18sdp"
        android:text="@string/home_navigation"
        android:textSize="@dimen/_9ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView2" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_17sdp"
        android:layout_marginEnd="@dimen/_6sdp"
        android:layout_marginBottom="@dimen/_18sdp"
        android:src="@drawable/ic_nav"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView_navigation" />

    <TextView
        android:id="@+id/textView_select"
        style="@style/MainPrimaryText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_19sdp"
        android:layout_marginBottom="@dimen/_18sdp"
        android:text="@string/home_select"
        android:textSize="@dimen/_9ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView3" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_17sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_18sdp"
        android:src="@drawable/ic_ok"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView_select" />
</android.support.constraint.ConstraintLayout>