<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <ImageView
            android:id="@+id/viewMainLogoBG"
            android:layout_width="@dimen/_72sdp"
            android:layout_height="@dimen/_72sdp"
            android:background="@drawable/ic_logo_round_bg"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    <ImageView
            android:id="@+id/viewMainLogo"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="@dimen/_5sdp"
            android:scaleType="fitCenter"
            app:layout_constraintTop_toTopOf="@id/viewMainLogoBG"
            app:layout_constraintBottom_toBottomOf="@id/viewMainLogoBG"
            app:layout_constraintStart_toStartOf="@id/viewMainLogoBG"
            app:layout_constraintEnd_toEndOf="@id/viewMainLogoBG"/>


    <android.support.constraint.ConstraintLayout android:layout_width="match_parent"
                                                 android:layout_height="@dimen/_32sdp"
                                                 app:layout_constraintStart_toStartOf="parent"
                                                 app:layout_constraintEnd_toEndOf="parent"
                                                 app:layout_constraintBottom_toBottomOf="parent"
                                                 android:background="@color/block30">

        <ImageView
                android:id="@+id/viewLogo"
                android:layout_width="@dimen/_34sdp"
                android:layout_height="@dimen/_19sdp"
                android:layout_marginStart="@dimen/_18sdp"
                android:src="@drawable/ic_live_tv"
                android:background="@drawable/ic_channel_logo_bg"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

        <TextView
                android:id="@+id/textChannelName"
                style="@style/MainPrimaryText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:text="sample"
                android:textSize="@dimen/_9ssp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/viewLogo"
                app:layout_constraintBottom_toBottomOf="parent"/>


        <TextView
                android:id="@+id/textView5"
                style="@style/MainPrimaryText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_18sdp"
                android:text="@string/tv_channel_fullscreen_home"
                android:textSize="@dimen/_9ssp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_17sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:src="@drawable/ic_home"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/textView5"/>

        <TextView
                android:id="@+id/textView6"
                style="@style/MainPrimaryText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_18sdp"
                android:text="@string/tv_channel_fullscreen_channel"
                android:textSize="@dimen/_9ssp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/imageView2"/>

        <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_17sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:src="@drawable/ic_change_channel"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/textView6"/>

        <TextView
                android:id="@+id/textView7"
                style="@style/MainPrimaryText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_19sdp"
                android:text="@string/tv_channel_fullscreen_back"
                android:textSize="@dimen/_9ssp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/imageView3"/>

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_17sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:src="@drawable/ic_ok"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/textView7"/>


    </android.support.constraint.ConstraintLayout>


</android.support.constraint.ConstraintLayout>